--- a/templates/mainsite/diacritics.html
+++ b/templates/mainsite/diacritics.html
@@ -67,12 +67,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portuguese Festivals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
     <style>
         .header { color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; }
         .card-header { background-color: #007bff; color: white; font-weight: bold; font-size: 22px; border: 2px solid black;}
         .footer { background-color: #f8f9fa; text-align: center; padding: 10px; font-size: 0.8rem; }
         .card { 
-            margin-bottom: 40px; border-radius: 10px; box-shadow: 0 0px 10px 0px ; background-color: beige; border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;
+            margin-bottom: 40px; border-radius: 10px; box-shadow: 3px 2px 1px 2px ; background-color: beige; border: 3px solid black;
         }
         .card-header { 
             border-top-right-radius: 10px;
@@ -109,13 +111,34 @@
         border-color: #dee2e6 #dee2e6 #fff; /* Adjust the border color if needed */
     }
 
+    #paneContent {
+        width: 97%;
+        margin-left: 4%;
+        margin-top: 1%;
+    }
+
+    .sound-button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 0; /* Remove padding if you want the button closer to the text */
+    display: inline-flex; /* Align the icon vertically */
+    align-items: center;
+    justify-content: center;
+}
+
+    .examples {
+        font-size: 18px;
+    }
+
     </style>
 </head>
 <body onload="initMaps()">
     <div class="container mt-4">
         <h1 class="mb-4 header">Diacritics</h1>
-        <div class="intro-text" style="margin-bottom: 40px;">
-            <h2 class="sub-heading">What are Diacritics?</h2>
+        <div class="intro-text" style="margin-bottom: 40px; border: 3px solid black">
+            <h2 class="sub-heading"><strong>What are Diacritics?</strong></h2>
             <p>Diacritics are marks placed above or below a letter to alter its sound. In Portuguese, diacritics are used to indicate stress, 
                 vowel height, nasalization, and to differentiate homographs. 
                 Understanding these can greatly improve your pronunciation and comprehension of Portuguese. Below, we shall go over the most commonly used diacritics in Portuguese,
@@ -137,7 +160,7 @@
                 </ul>
                 <div class="tab-content" id="diacriticTabsContent">
                     <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
-                        <table>
+                        <center><table style="width: 95%;">
                             <tr style="background-color:rgb(202, 202, 171)">
                                 <th>Diacritic</th>
                                 <th>Function</th>
@@ -146,36 +169,43 @@
                             <tr>
                                 <td>Á, á (acute accent)</td>
                                 <td>Indicates stress on a syllable and changes vowel sound.</td>
-                                <td>cágado (turtle), avó (grandmother)</td>
+                                <td class="examples">cágado (turtle) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('cágado')">🔊</button>
+                                    <br> avó (grandmother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avó')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ã, ã (tilde)</td>
                                 <td>Indicates nasalization of a vowel.</td>
-                                <td>mãe (mother), pão (bread)</td>
+                                <td class="examples">mãe (mother) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('mãe')">🔊</button>
+                                    <br> pão (bread) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pão')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ê, ê (circumflex)</td>
                                 <td>Indicates a closed vowel.</td>
-                                <td>pêssego (peach), você (you)</td>
+                                <td class="examples">pêssego (peach) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pêssego')">🔊</button>
+                                    <br> você (you) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('você')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ç, ç (cedilla)</td>
                                 <td>Indicates a soft 'c' sound before 'a', 'o', 'u'.</td>
-                                <td>coração (heart), ação (action)</td>
+                                <td class="examples">coração (heart) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('coração')">🔊</button>
+                                    <br>ação (action) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('ação')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>Ô, ô (circumflex)</td>
                                 <td>Indicates a stressed, closed vowel sound.</td>
-                                <td>avião (airplane), pôr (to put)</td>
+                                <td class="examples">avião (airplane) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('avião')">🔊</button> 
+                                    <br>pôr (to put) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('pôr')">🔊</button></td>
                             </tr>
                             <tr>
                                 <td>À, à (grave accent)</td>
                                 <td>Used to denote stress and also in contractions such as à (to the) combining a preposition and a definite article.</td>
-                                <td>à noite (at night), à vontade (at ease)</td>
+                                <td class="examples">à noite (at night) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à noite')">🔊</button> 
+                                    <br>à vontade (at ease) <button class="sound-button" id="speakBtn" style="margin-left: 10px;" onclick="convertTextToSpeech('à vontade')">🔊</button></td>
                             </tr>
-                        </table>
+                        </table></center>
                     </div>
                     <div class="tab-pane fade" id="usage-tips" role="tabpanel" aria-labelledby="usage-tips-tab">
+                        <div id="paneContent">
                         <p>Understanding when and how to use these diacritics can be challenging for learners of Portuguese. Here are some tips:</p>
                         <ul>
                             <li><strong>Acute Accent (á, é, í, ó, ú)</strong>: Usually marks the stressed vowel in a word. Pay attention to the pronunciation differences it causes.</li>
@@ -184,15 +214,19 @@
                             <li><strong>Cedilla (ç)</strong>: Turns the pronunciation of 'c' from a 'k' sound to an 's' sound before 'a', 'o', 'u'. It's crucial for correct pronunciation of common words.</li>
                             <li><strong>Grave Accent (à)</strong>: Typically used in prepositional contractions, understanding its use can significantly help in mastering prepositions in Portuguese.</li>
                         </ul>
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="common-mistakes" role="tabpanel" aria-labelledby="common-mistakes-tab">
-                        <p>Avoid these frequent errors when using Portuguese diacritics:</p>
-                        <ul>
-                            <li>Misplacing the acute accent can lead to mispronunciations or misunderstanding, as it changes the stressed syllable of the word.</li>
-                            <li>Confusing 'ê' and 'é' can alter the meaning of words, as these denote different vowel sounds and can distinguish different verb tenses.</li>
-                            <li>Forgetting to use 'ç' can result in a completely different pronunciation, potentially confusing words like 'copo' (glass) and 'copos' (glasses).</li>
-                            <li>Overlooking the use of 'à' in prepositions can change the meaning of sentences, making it essential to grasp for proficiency in Portuguese grammar.</li>
-                        </ul>
+                        
+                        <div id="paneContent">
+                            <p>Avoid these frequent errors when using Portuguese diacritics:</p>
+                            <ul>
+                                <li>Misplacing the acute accent can lead to mispronunciations or misunderstanding, as it changes the stressed syllable of the word.</li>
+                                <li>Confusing 'ê' and 'é' can alter the meaning of words, as these denote different vowel sounds and can distinguish different verb tenses.</li>
+                                <li>Forgetting to use 'ç' can result in a completely different pronunciation, potentially confusing words like 'copo' (glass) and 'copos' (glasses).</li>
+                                <li>Overlooking the use of 'à' in prepositions can change the meaning of sentences, making it essential to grasp for proficiency in Portuguese grammar.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -211,5 +245,23 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+    function convertTextToSpeech(textToSpeak) {
+        $.ajax({
+            url: '/text-to-speech/',  // URL to Django view
+            type: 'POST',
+            data: { 'text': textToSpeak },
+            success: function(response) {
+                console.log(response.message);
+                // Optional: Play the response if it includes audio data
+            },
+            error: function(error) {
+                console.log(error);
+            }
+        });
+    }
+</script>
 </body>
 </html>
